--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,19 @@
 {{ define "main" }}
 <div class="container" role="main">
+  {{ if .Params.youtube }}
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <article role="main" class="blog-post">
+    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+    <div class="embed-responsive embed-responsive-16by9 center-block">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{.Params.youtube}}?autoplay=1" allowfullscreen
+      title="YouTube Video"></iframe>
+    </div>
+    </div>
+  </div>
+  {{ end }}
+  <div class="row">
+    <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+
+    <article role="main" class="blog-post">
         {{ .Content }}
 
         {{ if .Params.tags }}
