--- a/layouts/page/digitalpulse.html
+++ b/layouts/page/digitalpulse.html
@@ -15,7 +15,7 @@
                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{.Params.youtube}}?autoplay=1" allowfullscreen title="YouTube Video"></iframe>
               </div>
               {{ end }}
-              <h3>You can find the show notes <a target="_blank" href="{{ .Permalink }}">here</a></h3>
+              <h3>You can find the show notes <a target="_blank" href="{{ .Permalink }}">here</a> or listen to it on <a href="https://open.spotify.com/episode/{{ .Params.spotify }}">Spotify</a></h3>
             </article>
             <h1>All episodes</h1>
             <div class="row">
